deploy: 4e22bd2c4f30cc4388eafd758242c0e4a9fa3db7

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Luma44 Collections</title>
-    <script type="module" crossorigin src="/luma_poc/assets/index.461990d0.js"></script>
-    <link rel="stylesheet" href="/luma_poc/assets/index.ac8d0b30.css">
+    <script type="module" crossorigin src="/luma_poc/assets/index.954449ad.js"></script>
+    <link rel="stylesheet" href="/luma_poc/assets/index.0508a3b1.css">
   </head>
   <body>
-    <div id="app"></div>
+    <main id="app"></main>
     
   </body>
 </html>
