deploy: 77e33328305eef9801156dfe36d4791fc4393619

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/luma_poc/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Luma44 Collections</title>
-    <script type="module" crossorigin src="/luma_poc/assets/index.65102c54.js"></script>
-    <link rel="stylesheet" href="/luma_poc/assets/index.63ace852.css">
+    <script type="module" crossorigin src="/assets/index.6776a801.js"></script>
+    <link rel="stylesheet" href="/assets/index.63ace852.css">
   </head>
   <body>
     <main id="app"></main>
